Fix workflow status and add segment tracking

--- a/packages/frontend/src/i18n/locales/ko.json
+++ b/packages/frontend/src/i18n/locales/ko.json
@@ -174,6 +174,7 @@
     },
     "history": "대화 이력",
     "noHistory": "대화 이력이 없습니다",
+    "loadMore": "더 보기",
     "artifacts": "아티팩트",
     "noArtifacts": "아티팩트가 없습니다"
   },
