--- a/packages/frontend/src/i18n/locales/en.json
+++ b/packages/frontend/src/i18n/locales/en.json
@@ -174,6 +174,7 @@
     },
     "history": "History",
     "noHistory": "No conversation history",
+    "loadMore": "Load more",
     "artifacts": "Artifacts",
     "noArtifacts": "No artifacts yet"
   },
