--- a/packages/frontend/src/i18n/locales/ja.json
+++ b/packages/frontend/src/i18n/locales/ja.json
@@ -174,6 +174,7 @@
     },
     "history": "会話履歴",
     "noHistory": "会話履歴がありません",
+    "loadMore": "もっと見る",
     "artifacts": "アーティファクト",
     "noArtifacts": "アーティファクトがありません"
   },
