--- a/packages/frontend/src/i18n/locales/ko.json
+++ b/packages/frontend/src/i18n/locales/ko.json
@@ -5,6 +5,10 @@
     "create": "생성",
     "delete": "삭제",
     "edit": "편집",
+    "rename": "이름 변경",
+    "copy": "복사",
+    "copied": "복사됨!",
+    "download": "다운로드",
     "close": "닫기",
     "loading": "로딩 중",
     "loadingDescription": "잠시만 기다려 주세요...",
@@ -20,6 +24,7 @@
   },
   "nav": {
     "projects": "프로젝트",
+    "artifacts": "아티팩트",
     "settings": "설정",
     "logout": "로그아웃",
     "greeting": "안녕하세요, {{name}}님",
@@ -178,7 +183,11 @@
     "artifacts": "아티팩트",
     "noArtifacts": "아티팩트가 없습니다",
     "deleteSession": "대화 삭제",
-    "deleteSessionConfirm": "이 대화를 삭제하시겠습니까? 삭제된 대화는 복구할 수 없습니다."
+    "deleteSessionConfirm": "이 대화를 삭제하시겠습니까? 삭제된 대화는 복구할 수 없습니다.",
+    "renameSession": "대화 이름 변경",
+    "sessionNamePlaceholder": "대화 이름을 입력하세요",
+    "deleteArtifact": "아티팩트 삭제",
+    "deleteArtifactConfirm": "이 아티팩트를 삭제하시겠습니까? 삭제된 아티팩트는 복구할 수 없습니다."
   },
   "viewer": {
     "zoomIn": "확대",
@@ -204,6 +213,16 @@
     "startNewChat": "새 대화 시작",
     "deleteAgent": "에이전트 삭제",
     "deleteConfirmMessage": "\"{{name}}\"을(를) 삭제하시겠습니까? 이 작업은 되돌릴 수 없습니다."
+  },
+  "artifacts": {
+    "heroTag": "AI Generated Artifacts",
+    "heroTitle": "AI가 생성한 코드, 문서, 인사이트",
+    "heroDescription": "대화 중에 생성된 모든 아티팩트를 탐색하고 관리하세요.\n생성된 콘텐츠를 빠르게 복사, 다운로드하거나 정리할 수 있습니다.",
+    "description": "생성된 아티팩트 보기 및 관리",
+    "searchPlaceholder": "아티팩트 검색...",
+    "noArtifacts": "아티팩트가 없습니다",
+    "noArtifactsDescription": "채팅 대화 중에 생성된 아티팩트가 여기에 표시됩니다.",
+    "items": "개"
   },
   "languages": {
     "ko": "한국어",
