Add multi-level collapsible tool result in chat

--- a/packages/frontend/src/i18n/locales/en.json
+++ b/packages/frontend/src/i18n/locales/en.json
@@ -20,7 +20,9 @@
     "noResults": "No results found",
     "language": "Language",
     "yesterday": "Yesterday",
-    "daysAgo": "{{count}} days ago"
+    "daysAgo": "{{count}} days ago",
+    "showMore": "Show more",
+    "showLess": "Show less"
   },
   "nav": {
     "projects": "Projects",
