Add project-based WebSocket subscriptions for workflow progress

--- a/packages/frontend/src/i18n/locales/en.json
+++ b/packages/frontend/src/i18n/locales/en.json
@@ -85,9 +85,11 @@
     "orClick": "or click to select",
     "supportedFormats": "Supports documents (PDF, DOC, TXT), images (PNG, JPG, GIF, TIFF), videos (MP4, MOV, AVI), and audio files (MP3, WAV, FLAC) up to 500MB",
     "processing": "Processing",
+    "in_progress": "Analyzing",
     "completed": "Completed",
     "failed": "Failed",
     "pending": "Pending",
+    "uploaded": "Uploaded",
     "deleteConfirm": "Are you sure you want to delete this document?",
     "view": "View",
     "useBda": "Use BDA Analysis",
@@ -111,7 +113,7 @@
     "totalSegments": "Total Segments",
     "analysisLanguage": "Analysis Language",
     "created": "Created",
-    "segmentAnalysis": "Segment {{index}} Analysis",
+    "segmentAiAnalysis": "Segment AI Analysis",
     "clickToView": "Click to view content",
     "noSegments": "No segments available",
     "loadingImage": "Loading image...",
