--- a/packages/frontend/src/i18n/locales/ja.json
+++ b/packages/frontend/src/i18n/locales/ja.json
@@ -85,9 +85,11 @@
     "orClick": "またはクリックして選択",
     "supportedFormats": "ドキュメント（PDF、DOC、TXT）、画像（PNG、JPG、GIF、TIFF）、動画（MP4、MOV、AVI）、音声（MP3、WAV、FLAC）最大500MBまで対応",
     "processing": "処理中",
+    "in_progress": "分析中",
     "completed": "完了",
     "failed": "失敗",
     "pending": "保留中",
+    "uploaded": "アップロード済み",
     "deleteConfirm": "このドキュメントを削除しますか？",
     "view": "表示",
     "useBda": "BDA分析を使用",
@@ -111,7 +113,7 @@
     "totalSegments": "総セグメント数",
     "analysisLanguage": "分析言語",
     "created": "作成日",
-    "segmentAnalysis": "セグメント {{index}} 分析",
+    "segmentAiAnalysis": "Segment AI Analysis",
     "clickToView": "クリックして内容を表示",
     "noSegments": "セグメントがありません",
     "loadingImage": "画像を読み込み中...",
