--- a/packages/frontend/src/i18n/locales/ko.json
+++ b/packages/frontend/src/i18n/locales/ko.json
@@ -85,9 +85,11 @@
     "orClick": "또는 클릭하여 선택",
     "supportedFormats": "문서(PDF, DOC, TXT), 이미지(PNG, JPG, GIF, TIFF), 동영상(MP4, MOV, AVI), 오디오(MP3, WAV, FLAC) 최대 500MB 지원",
     "processing": "처리 중",
+    "in_progress": "분석 중",
     "completed": "완료",
     "failed": "실패",
     "pending": "대기 중",
+    "uploaded": "업로드됨",
     "deleteConfirm": "이 문서를 삭제하시겠습니까?",
     "view": "보기",
     "useBda": "BDA 분석 사용",
@@ -111,7 +113,7 @@
     "totalSegments": "총 세그먼트",
     "analysisLanguage": "분석 언어",
     "created": "생성일",
-    "segmentAnalysis": "세그먼트 {{index}} 분석",
+    "segmentAiAnalysis": "Segment AI Analysis",
     "clickToView": "클릭하여 내용 보기",
     "noSegments": "세그먼트가 없습니다",
     "loadingImage": "이미지 로딩 중...",
