Add document mentions, fix agent API, pass document_id to LanceDB

--- a/packages/frontend/src/i18n/locales/en.json
+++ b/packages/frontend/src/i18n/locales/en.json
@@ -208,7 +208,10 @@
     "sessionNamePlaceholder": "Enter session name",
     "deleteArtifact": "Delete Artifact",
     "deleteArtifactConfirm": "Are you sure you want to delete this artifact? This action cannot be undone.",
-    "selectArtifact": "Select artifact"
+    "selectArtifact": "Select artifact",
+    "documents": "Documents",
+    "noDocuments": "No documents found",
+    "tabToSwitch": "Press Tab to switch"
   },
   "viewer": {
     "zoomIn": "Zoom In",
