Add Q&A add/delete features to segment analysis

--- a/packages/frontend/src/i18n/locales/en.json
+++ b/packages/frontend/src/i18n/locales/en.json
@@ -128,7 +128,27 @@
     "reanalyzeStarting": "Starting re-analysis...",
     "reanalyzeStarted": "Re-analysis has started",
     "reanalyzeFailed": "Failed to start re-analysis",
-    "reanalyzeNotAllowed": "Only completed or failed workflows can be re-analyzed"
+    "reanalyzeNotAllowed": "Only completed or failed workflows can be re-analyzed",
+    "regenerateQa": "Regenerate",
+    "regenerateQaTitle": "Regenerate Q&A",
+    "regenerateQaDescription": "Edit the question and add instructions to regenerate this Q&A item.",
+    "regenerateQaQuestion": "Question",
+    "regenerateQaInstructions": "Additional Instructions",
+    "regenerateQaInstructionsPlaceholder": "Enter additional instructions for regeneration (optional)",
+    "regenerateQaStart": "Regenerate",
+    "regeneratingQa": "Regenerating answer...",
+    "addQa": "Add Question",
+    "addQaTitle": "Add New Q&A",
+    "addQaDescription": "Enter a new question to analyze this segment.",
+    "addQaQuestion": "Question",
+    "addQaQuestionPlaceholder": "Enter your question about this segment",
+    "addQaInstructions": "Additional Instructions",
+    "addQaInstructionsPlaceholder": "Enter additional instructions for analysis (optional)",
+    "addQaStart": "Add",
+    "addingQa": "Adding question...",
+    "deleteQa": "Delete",
+    "deleteQaTitle": "Delete Q&A",
+    "deleteQaConfirm": "Are you sure you want to delete this Q&A? This action cannot be undone."
   },
   "ocr": {
     "title": "OCR Settings",
