--- a/packages/frontend/src/i18n/locales/ja.json
+++ b/packages/frontend/src/i18n/locales/ja.json
@@ -128,7 +128,27 @@
     "reanalyzeStarting": "再分析を開始中...",
     "reanalyzeStarted": "再分析が開始されました",
     "reanalyzeFailed": "再分析の開始に失敗しました",
-    "reanalyzeNotAllowed": "完了または失敗したワークフローのみ再分析できます"
+    "reanalyzeNotAllowed": "完了または失敗したワークフローのみ再分析できます",
+    "regenerateQa": "再生成",
+    "regenerateQaTitle": "Q&A再生成",
+    "regenerateQaDescription": "質問を編集し、追加指示を入力してこのQ&Aアイテムを再生成します。",
+    "regenerateQaQuestion": "質問",
+    "regenerateQaInstructions": "追加指示",
+    "regenerateQaInstructionsPlaceholder": "再生成のための追加指示を入力してください（オプション）",
+    "regenerateQaStart": "再生成",
+    "regeneratingQa": "回答を再生成中...",
+    "addQa": "質問を追加",
+    "addQaTitle": "新しいQ&Aを追加",
+    "addQaDescription": "このセグメントを分析する新しい質問を入力してください。",
+    "addQaQuestion": "質問",
+    "addQaQuestionPlaceholder": "このセグメントについての質問を入力してください",
+    "addQaInstructions": "追加指示",
+    "addQaInstructionsPlaceholder": "分析のための追加指示を入力してください（オプション）",
+    "addQaStart": "追加",
+    "addingQa": "質問を追加中...",
+    "deleteQa": "削除",
+    "deleteQaTitle": "Q&Aを削除",
+    "deleteQaConfirm": "このQ&Aを削除しますか？削除された項目は復元できません。"
   },
   "ocr": {
     "title": "OCR設定",
