--- a/packages/frontend/src/i18n/locales/ko.json
+++ b/packages/frontend/src/i18n/locales/ko.json
@@ -128,7 +128,27 @@
     "reanalyzeStarting": "재분석 시작 중...",
     "reanalyzeStarted": "재분석이 시작되었습니다",
     "reanalyzeFailed": "재분석 시작에 실패했습니다",
-    "reanalyzeNotAllowed": "완료되거나 실패한 워크플로우만 재분석할 수 있습니다"
+    "reanalyzeNotAllowed": "완료되거나 실패한 워크플로우만 재분석할 수 있습니다",
+    "regenerateQa": "재생성",
+    "regenerateQaTitle": "Q&A 재생성",
+    "regenerateQaDescription": "질문을 수정하고 추가 지시사항을 입력하여 이 Q&A 항목을 재생성합니다.",
+    "regenerateQaQuestion": "질문",
+    "regenerateQaInstructions": "추가 지시사항",
+    "regenerateQaInstructionsPlaceholder": "재생성을 위한 추가 지시사항을 입력하세요 (선택사항)",
+    "regenerateQaStart": "재생성",
+    "regeneratingQa": "답변 재생성 중...",
+    "addQa": "질문 추가",
+    "addQaTitle": "새 Q&A 추가",
+    "addQaDescription": "이 세그먼트를 분석할 새 질문을 입력하세요.",
+    "addQaQuestion": "질문",
+    "addQaQuestionPlaceholder": "이 세그먼트에 대한 질문을 입력하세요",
+    "addQaInstructions": "추가 지시사항",
+    "addQaInstructionsPlaceholder": "분석을 위한 추가 지시사항을 입력하세요 (선택사항)",
+    "addQaStart": "추가",
+    "addingQa": "질문 추가 중...",
+    "deleteQa": "삭제",
+    "deleteQaTitle": "Q&A 삭제",
+    "deleteQaConfirm": "이 Q&A를 삭제하시겠습니까? 삭제된 항목은 복구할 수 없습니다."
   },
   "ocr": {
     "title": "OCR 설정",
