--- a/packages/frontend/src/i18n/locales/ko.json
+++ b/packages/frontend/src/i18n/locales/ko.json
@@ -222,7 +222,7 @@
     "enterToSend": "Enter로 전송, Shift+Enter로 줄바꿈",
     "usingTool": "{{tool}} 사용 중...",
     "toolResult": "도구 실행 결과",
-    "artifactSaved": "파일 저장됨",
+    "artifactSaved": "아티팩트",
     "clickToDownload": "클릭하여 다운로드",
     "welcomeTitle": "무엇을 도와드릴까요?",
     "welcomeDescription": "업로드된 문서에 대해 질문해 보세요",
@@ -271,7 +271,8 @@
     "changeConfirmMessage": "에이전트를 변경하면 새 대화가 시작됩니다. 현재 대화는 기록에 저장됩니다.",
     "startNewChat": "새 대화 시작",
     "deleteAgent": "에이전트 삭제",
-    "deleteConfirmMessage": "\"{{name}}\"을(를) 삭제하시겠습니까? 이 작업은 되돌릴 수 없습니다."
+    "deleteConfirmMessage": "\"{{name}}\"을(를) 삭제하시겠습니까? 이 작업은 되돌릴 수 없습니다.",
+    "notFound": "\"{{name}}\" 에이전트를 찾을 수 없습니다. 기본 에이전트를 사용합니다."
   },
   "artifacts": {
     "heroTag": "AI Generated Artifacts",
@@ -324,5 +325,11 @@
     "he": "히브리어",
     "mn": "몽골어",
     "sw": "스와힐리어"
+  },
+  "systemPrompt": {
+    "title": "System Prompt",
+    "placeholder": "시스템 프롬프트를 입력하세요...",
+    "saveHint": "Cmd+Enter로 저장",
+    "saveSuccess": "시스템 프롬프트가 저장되었습니다"
   }
 }
