--- a/packages/frontend/src/i18n/locales/ko.json
+++ b/packages/frontend/src/i18n/locales/ko.json
@@ -36,7 +36,11 @@
     "lightMode": "라이트 모드",
     "tools": "도구",
     "export": "내보내기",
-    "import": "가져오기"
+    "import": "가져오기",
+    "documentation": "문서"
+  },
+  "sidebar": {
+    "aiDisclaimer": "AI는 실수할 수 있습니다.\n중요한 정보는 반드시 확인하세요."
   },
   "projects": {
     "title": "프로젝트",
@@ -325,6 +329,18 @@
     "he": "히브리어",
     "mn": "몽골어",
     "sw": "스와힐리어"
+  },
+  "settings": {
+    "heroTitle": "환경설정 및 정보",
+    "storedInBrowser": "이 설정은 브라우저의 로컬 스토리지에 저장됩니다.",
+    "display": "디스플레이",
+    "language": "언어",
+    "selectLanguage": "선호하는 언어를 선택하세요",
+    "theme": "테마",
+    "darkMode": "다크 모드",
+    "lightMode": "라이트 모드",
+    "license": "라이선스",
+    "licenseTitle": "Amazon Software License"
   },
   "systemPrompt": {
     "title": "System Prompt",
