Enhance chat UI with research mode and stage streaming

--- a/packages/frontend/src/i18n/locales/en.json
+++ b/packages/frontend/src/i18n/locales/en.json
@@ -22,7 +22,9 @@
     "yesterday": "Yesterday",
     "daysAgo": "{{count}} days ago",
     "showMore": "Show more",
-    "showLess": "Show less"
+    "showLess": "Show less",
+    "expand": "Expand",
+    "collapse": "Collapse"
   },
   "nav": {
     "projects": "Projects",
@@ -250,7 +252,24 @@
     "selectArtifact": "Select artifact",
     "documents": "Documents",
     "noDocuments": "No documents found",
-    "tabToSwitch": "Press Tab to switch"
+    "tabToSwitch": "Press Tab to switch",
+    "addFileOrPhoto": "Add file or photo",
+    "research": "Research",
+    "researchNotAvailable": "Research agent is not configured",
+    "useAgent": "Use agent",
+    "manageAgents": "Manage agents",
+    "stage": {
+      "research_agent": "Researching",
+      "plan_agent": "Planning",
+      "write_agent": "Writing",
+      "pptx_agent": "Creating Presentation"
+    },
+    "stageResult": {
+      "research_agent": "Research Results",
+      "plan_agent": "Plan",
+      "write_agent": "Writing Results",
+      "pptx_agent": "Presentation"
+    }
   },
   "viewer": {
     "zoomIn": "Zoom In",
