Improve chat layout and fix OIDC state leak

--- a/packages/frontend/src/i18n/locales/en.json
+++ b/packages/frontend/src/i18n/locales/en.json
@@ -99,7 +99,13 @@
     "deleteConfirm": "Are you sure you want to delete this document?",
     "view": "View",
     "useBda": "Use BDA Analysis",
-    "useBdaDescription": "Enable Bedrock Document Analysis for advanced document understanding. Recommended for complex documents with tables, charts, or multi-column layouts."
+    "useBdaDescription": "Enable Bedrock Document Analysis for advanced document understanding. Recommended for complex documents with tables, charts, or multi-column layouts.",
+    "searchPlaceholder": "Search documents...",
+    "filterAll": "All",
+    "filterCompleted": "Completed",
+    "filterProcessing": "Processing",
+    "filterFailed": "Failed",
+    "noMatchingDocuments": "No matching documents"
   },
   "workflow": {
     "title": "Workflow",
@@ -306,6 +312,7 @@
     "searchPlaceholder": "Search artifacts...",
     "noArtifacts": "No artifacts yet",
     "noArtifactsDescription": "Artifacts generated during chat conversations will appear here.",
+    "noMatchingArtifacts": "No matching artifacts",
     "items": "items",
     "goToProject": "Go to Project",
     "unsupportedType": "Preview not available for this file type",
